Cambios en general

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/logo3.svg" type="image/x-icon" alt="logoMateros">
     <!-- ESTILO PROPIO -->
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Inicio</title>
+    <title>Inicio 💻</title>
 </head>
 <body>
     <div class="contenedor">
@@ -83,7 +84,7 @@
             <a href="https://www.instagram.com/nahuel_telloo/"><img src="./assets/img/instagram.svg" alt="instagram"></a>
             <a href="https://www.facebook.com/NahuelTello1669 "><img src="./assets/img/facebook.svg" alt="facebook"></a>
             <a href="https://www.linkedin.com/in/matias-nahuel-tello-parra-189387161/"><img src="./assets/img/linkedin.svg" alt="linkedin"></a>
-            <p>Lorem ipsum dolor sit.</p>
+            <p>Todos los derechos reservados</p>
         </div>
     </footer>
 </body>
