--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         <a href="./pages/info.html">Info</a>
                     </li>
                     <li class="li-nav"  >
-                        <a href="" id="li-nav"> Contacto</a>
+                        <a href="./pages/contacto.html" id="li-nav"> Contacto</a>
                     </li>
                 </ul>
             </nav>
