Cambios en el footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/img/logo3.svg" type="image/x-icon" alt="logoMateros">
+    <!-- OTRO ESTILO -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- ESTILO PROPIO -->
     <link rel="stylesheet" href="./css/styles.css">
     <title>Inicio 💻</title>
@@ -79,13 +81,30 @@
     </div>
     <footer class="footer cardColor">
         <div class="redes">
-            <a href=""><img src="./assets/img/git.svg" alt=""></a>
-            <a href="https://github.com/NahuelTello/NahuelTello"><img src="./assets/img/github.svg" alt="github"></a>
-            <a href="https://www.instagram.com/nahuel_telloo/"><img src="./assets/img/instagram.svg" alt="instagram"></a>
-            <a href="https://www.facebook.com/NahuelTello1669 "><img src="./assets/img/facebook.svg" alt="facebook"></a>
-            <a href="https://www.linkedin.com/in/matias-nahuel-tello-parra-189387161/"><img src="./assets/img/linkedin.svg" alt="linkedin"></a>
-            <p>Todos los derechos reservados</p>
+            <a href="">
+                <label for="cb1">
+                    <i class="fa fa-git"></i>
+                </label>
+            </a>
+            <a href="https://github.com/NahuelTello/NahuelTello">
+                    <label for="cb2">
+                        <i class="fa fa-github-square"></i>
+                    </label>
+            </a>
+            <a href="https://www.instagram.com/nahuel_telloo/">
+                <label for="cb3"><i class="fa fa-instagram"></i>
+                </label>
+            </a>
+            <a href="https://www.facebook.com/NahuelTello1669 ">
+                <label for="cb4"><i class="fa fa-facebook"></i>
+                </label>
+                </a>
+            <a href="https://www.linkedin.com/in/matias-nahuel-tello-parra-189387161/">
+                <label for="cb5"><i class="fa fa-linkedin"></i>
+                </label>
+            </a>
         </div>
+        <p>Todos los derechos reservados</p>
     </footer>
 </body>
 </html>
